# my-api

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_04_03_2044-962ece110e7d_create_table_for_users.py  2025_04_03_2045-e845a3112a88_create_table_tasks_and_relations.py  2025_04_04_1624-0bf38a4ad772_create_tables_projects.py  2025_04_04_1628-9fe417ac1f54_create_tables_tasks_and_relations.py  2025_04_04_1637-ce6eec3e8ccb_create_secondary_tables.py
app/: __init__.py  exceptions.py
app/auth/: __init__.py  auth_utils.py  authorization.py  fake_users.py  helpers.py  jwt.py
app/core/: database.py  settings.py
app/crud/: __init__.py  project.py  task.py  user.py  user_project.py
app/models/: __init__.py  project.py  task.py  user.py  user_projects.py
app/routers/: __init__.py  project.py  task.py  user.py  user_project.py
app/schemas/: __init__.py  project.py  task.py  token.py  user.py
app/static/css/: style.css
app/templates/: __init__.py  base.html  create_user.html  delete_user.html  edit_user.html  home.html  pages.py  projects_list.html  task_detail.html  tasks_list.html  users_list.html
app/templates/users/: __init__.py  views.py
tests/: alembic.ini  conftest.py  test_database.py  test_projects.py  test_users.py
tests/alembic/: env.py
tests/alembic/versions/: 2025_04_13_1934-84f7bed7880c_test_init.py
